syntax = "proto3";

option go_package = "github.com/rajivgeraev/quick-stash/api/proto";

package storage;

service FileStorage {
  rpc StoreFile(stream FileChunk) returns (StoreFileResponse);
  rpc RetrieveFile(FileRequest) returns (stream FileChunk);
}

message FileChunk {
  string fileID = 1;  // Идентификатор файла, для сопоставления частей файла
  int32 partID = 2;   // Идентификатор части файла
  bytes data = 3;     // Данные части файла
}

message StoreFileResponse {
  bool success = 1;   // Индикатор успешного сохранения
  string message = 2; // Сообщение об ошибке, если есть //TODO сделать отдельный тип для ошибок
}

message FileRequest {
  string fileID = 1; // Идентификатор файла, который нужно извлечь
}
